# ApplyBots

./: .gitignore  LICENSE  Makefile  README.md  debug.py  env.example  pyrightconfig.json
backend/: Dockerfile  debug.py  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  config.py  prompts.py  tools.py  workflows.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  exceptions.py
backend/app/infra/: __init__.py
backend/app/schemas/: __init__.py  agent.py  alert.py  analytics.py  application.py  auth.py  billing.py  campaign.py  career_kit.py  career_tools.py  company_intel.py  gamification.py  job.py  profile.py  resume_builder.py  wellness.py
backend/app/workers/: alert_generator.py  application_submitter.py  celery_app.py  job_ingestion.py  status_monitor.py
backend/migrations/: env.py
backend/migrations/versions/: 0d8928dfb790_merge_heads.py  73121bdb7cc3_initial_migration.py  8f79a7770571_initial_migration.py  a3b5c7d9e1f2_add_resume_drafts_table.py  b4c6d8e0f3g4_add_application_stage_and_notes.py  c5d7e9f1g5h6_add_campaigns_tables.py  d6e8f0g2h4i6_add_copilot_learning_tables.py  e7f9g1h3i5j7_add_alerts_gamification_tables.py  f8g0h2i4j6k8_add_remote_timing_columns.py  g9h1i3j5k7l9_add_career_kit_sessions.py  h0i2j4k6l8m0_add_resume_extraction_error.py
backend/tests/: __init__.py  conftest.py  verify_pypdfium2_api.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: test_api_auth.py  test_resume_extraction.py
backend/tests/unit/: test_application_stage.py  test_auth.py  test_matcher.py  (+1 more)
(+336 files in other folders)
