[project]
name = "ApplyBots-backend"
version = "0.1.0"
description = "Agentic AI-powered automated job application platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "FBT",    # flake8-boolean-trap (no positional bools)
    "PLR",    # pylint refactoring
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "PLR0913", # too many arguments
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]  # Unused function arguments in tests

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
strict = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "chromadb.*",
    "playwright.*",
    "aioboto3.*",
    "stripe.*",
    "docx.*",
    "pypdfium2.*",

    "pytesseract.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/workers/*", "tests/*"]
